--- a/config-ecpm-boost-bruna.json
+++ b/config-ecpm-boost-bruna.json
@@ -1,5 +1,5 @@
 {
-  "targetUrl": "https://link.cifraads.com/MVwINT?utm_source=vinicius357&utm_term=357",
+  "targetUrl": "hhttps://link.cifraads.com/MVwINT?utm_source=vinicius357&utm_term=357",
   "totalSimulations": 5000,
   "concurrency": 10,
   "debug": true,
