--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "targetUrl": "https://cifradedinheiro.com/acao-solidaria/conquiste-300-reais-semanalmente-com-o-cifra-do-bem/?utm_source=357&utm_term=357&cf_ads=357",
+  "targetUrl": "https://link.cifraads.com/MVwINT?utm_source=vinicius357&utm_term=357",
    "totalSimulations": 10000,
     "concurrency": 3,
     "debug": true,
