--- a/config-ecpm-boost-2.json
+++ b/config-ecpm-boost-2.json
@@ -1,5 +1,5 @@
 {
-  "targetUrl": "https://link.cifraads.com/MVwINT?utm_source=vinicius357&utm_term=357",
+  "targetUrl": "https://verdadeiranatureza.com/2025/06/19/filha-de-roberto-justus-rafa-justus-diz-que-e-compradora-compulsiva/?utm_campaign=1597&utm_medium=6511105&utm_term=1&utm_source=cf90308b0aaa6",
   "totalSimulations": 5000,
   "concurrency": 10,
   "debug": true,
